{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 89,
  "lineage": "8fec1655-a7b8-4061-6202-9d558937a34c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_route_table",
      "name": "ansible_vpc_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:route-table/rtb-00d3233b6197944f3",
            "associations": [
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-081d55027aac8afa8",
                "route_table_id": "rtb-00d3233b6197944f3",
                "subnet_id": "subnet-0548875a8882ce580"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-042742a61970f7a1e",
                "route_table_id": "rtb-00d3233b6197944f3",
                "subnet_id": "subnet-056d2bff3570a48ef"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-062f57a8f351d3dfd",
                "route_table_id": "rtb-00d3233b6197944f3",
                "subnet_id": "subnet-04a7535dd767f2799"
              },
              {
                "gateway_id": "",
                "main": false,
                "route_table_association_id": "rtbassoc-0dceb143407653582",
                "route_table_id": "rtb-00d3233b6197944f3",
                "subnet_id": "subnet-0c578bc85caee2b83"
              }
            ],
            "filter": null,
            "gateway_id": null,
            "id": "rtb-00d3233b6197944f3",
            "owner_id": "010407234450",
            "route_table_id": "rtb-00d3233b6197944f3",
            "routes": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b9ad38da8f013b6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "subnet_id": "subnet-0c578bc85caee2b83",
            "tags": {
              "Name": "ansible_vpc_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ad024105dc47f6a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "project-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:vpc/vpc-06ad024105dc47f6a",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0500f444aa0359394",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01d75a200f91a691e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ad024105dc47f6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f135d0d2bbf4fc80",
            "owner_id": "010407234450",
            "tags": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:010407234450:instance/i-0545f1c46a492d440",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0545f1c46a492d440",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Lappy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e43b6f7f3e3f7db9",
            "private_dns": "ip-10-38-1-65.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.38.1.65",
            "public_dns": "ec2-18-208-160-51.compute-1.amazonaws.com",
            "public_ip": "18.208.160.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b23c22dabe3e9434",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c4284b10cbc9a00",
            "tags": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "DevSecOps-PublicServer-1",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "DevSecOps-PublicServer-1",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8e53f689c0e1411"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:010407234450:instance/i-06f4b6294b029074c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f4b6294b029074c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Lappy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06d1b706066a6ef6d",
            "private_dns": "ip-10-38-2-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.38.2.70",
            "public_dns": "ec2-35-175-248-15.compute-1.amazonaws.com",
            "public_ip": "35.175.248.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06071c41d0c74598f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb5463229d130f32",
            "tags": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "DevSecOps-PublicServer-2",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "DevSecOps-PublicServer-2",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8e53f689c0e1411"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:010407234450:instance/i-07203b28a67950abe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07203b28a67950abe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "Lappy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07738b67b2fc74bd8",
            "private_dns": "ip-10-38-3-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.38.3.142",
            "public_dns": "ec2-54-198-222-65.compute-1.amazonaws.com",
            "public_ip": "54.198.222.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04d9e5004fe6fbf14",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-000fcb4b581b87d47",
            "tags": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "DevSecOps-PublicServer-3",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "DevSecOps-PublicServer-3",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d8e53f689c0e1411"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_all",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:internet-gateway/igw-073fd5a61013f7c8f",
            "id": "igw-073fd5a61013f7c8f",
            "owner_id": "010407234450",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-IGW",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-IGW",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-073fd5a61013f7c8f",
            "id": "r-rtb-007dd04e93abedfa81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007dd04e93abedfa8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-from-ansible-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.38.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00d3233b6197944f33823620090",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d3233b6197944f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0194ef305fcc4fb3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default",
            "aws_vpc_peering_connection.ansible-vpc-peering",
            "data.aws_route_table.ansible_vpc_rt",
            "data.aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peering-to-ansible-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007dd04e93abedfa8179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007dd04e93abedfa8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0194ef305fcc4fb3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.terraform-public",
            "aws_vpc.default",
            "aws_vpc_peering_connection.ansible-vpc-peering",
            "data.aws_vpc.project-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:route-table/rtb-089d92c854e1b418d",
            "id": "rtb-089d92c854e1b418d",
            "owner_id": "010407234450",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-Private-RT",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-Private-RT",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:route-table/rtb-007dd04e93abedfa8",
            "id": "rtb-007dd04e93abedfa8",
            "owner_id": "010407234450",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-MAIN-RT",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-MAIN-RT",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d8c1d9ea3da20ed",
            "route_table_id": "rtb-089d92c854e1b418d",
            "subnet_id": "subnet-05ee4bcd8bd43619b"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0429926948f3fe4bf",
            "route_table_id": "rtb-089d92c854e1b418d",
            "subnet_id": "subnet-077775708817b8a82"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c612925b97b87066",
            "route_table_id": "rtb-089d92c854e1b418d",
            "subnet_id": "subnet-02c94070bc0fd1f0c"
          },
          "dependencies": [
            "aws_route_table.terraform-private",
            "aws_subnet.private-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d767d59d3002e43c",
            "route_table_id": "rtb-007dd04e93abedfa8",
            "subnet_id": "subnet-03c4284b10cbc9a00"
          },
          "dependencies": [
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7bf3c6cdd892145",
            "route_table_id": "rtb-007dd04e93abedfa8",
            "subnet_id": "subnet-0bb5463229d130f32"
          },
          "dependencies": [
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073ff92d776c660b1",
            "route_table_id": "rtb-007dd04e93abedfa8",
            "subnet_id": "subnet-000fcb4b581b87d47"
          },
          "dependencies": [
            "aws_route_table.terraform-public",
            "aws_subnet.public-subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:security-group/sg-0d8e53f689c0e1411",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d8e53f689c0e1411",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "10.2.1.0/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "010407234450",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:subnet/subnet-05ee4bcd8bd43619b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.38.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ee4bcd8bd43619b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010407234450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-PrivateSubnet-1",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-PrivateSubnet-1",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:subnet/subnet-077775708817b8a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.38.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077775708817b8a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010407234450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-PrivateSubnet-2",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-PrivateSubnet-2",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:subnet/subnet-02c94070bc0fd1f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.38.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c94070bc0fd1f0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010407234450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-PrivateSubnet-3",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-PrivateSubnet-3",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:subnet/subnet-03c4284b10cbc9a00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.38.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c4284b10cbc9a00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010407234450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-PublicSubnet-1",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-PublicSubnet-1",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:subnet/subnet-0bb5463229d130f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.38.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5463229d130f32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010407234450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-PublicSubnet-2",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-PublicSubnet-2",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:subnet/subnet-000fcb4b581b87d47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.38.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000fcb4b581b87d47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "010407234450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "production",
              "Name": "DevSecOps-PublicSubnet-3",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "tags_all": {
              "Env": "production",
              "Name": "DevSecOps-PublicSubnet-3",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:010407234450:vpc/vpc-08ed662392ad7d6d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.38.0.0/16",
            "default_network_acl_id": "acl-03c34cba2a3d69d00",
            "default_route_table_id": "rtb-0938a16657e4e4d21",
            "default_security_group_id": "sg-01a4a9582f3e29f9b",
            "dhcp_options_id": "dopt-01d75a200f91a691e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08ed662392ad7d6d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0938a16657e4e4d21",
            "owner_id": "010407234450",
            "tags": {
              "Name": "DevSecOps",
              "Owner": "Sreeharsha Veerapalli",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "production"
            },
            "tags_all": {
              "Name": "DevSecOps",
              "Owner": "Sreeharsha Veerapalli",
              "ProjectID": "devsecops-phoenix-123",
              "Terraform-Managed": "Yes",
              "environment": "production"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "ansible-vpc-peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "auto_accept": true,
            "id": "pcx-0194ef305fcc4fb3b",
            "peer_owner_id": "010407234450",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06ad024105dc47f6a",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "tags": {
              "Name": "Ansible-DevSecOps-Peering"
            },
            "tags_all": {
              "Name": "Ansible-DevSecOps-Peering"
            },
            "vpc_id": "vpc-08ed662392ad7d6d0"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_vpc.project-vpc"
          ]
        }
      ]
    }
  ]
}